--- a/GlusterFS-Server/dockerfile
+++ b/GlusterFS-Server/dockerfile
@@ -11,3 +11,8 @@ RUN apt-get update && \
     apt-get update && \
     apt-get install -y glusterfs-server
 
+#COPY /gluster-entrypoint.sh /
+#RUN chmod +x /gluster-entrypoint.sh
+#ENTRYPOINT [ "/bin/sh", "/gluster-entrypoint.sh" ]
+
+CMD ["/usr/sbin/init"]
