--- a/GlusterFS-Server/dockerfile
+++ b/GlusterFS-Server/dockerfile
@@ -17,7 +17,11 @@ RUN apt-get update && \
 VOLUME ["/data", "/var/lib/glusterd"]
 
 #Ports list from the original repo: https://github.com/gluster/gluster-containers/blob/master/CentOS/Dockerfile
-EXPOSE 2222 111 245 443 24007 2049 8080 6010 6011 6012 38465 38466 38468 38469 49152 49153 49154 49156 49157 49158 49159 49160 49161 49162
+#EXPOSE 2222 111 245 443 24007 2049 8080 6010 6011 6012 38465 38466 38468 38469 49152 49153 49154 49156 49157 49158 49159 49160 49161 49162
+
+#COPY /gluster-entrypoint.sh /
+#RUN chmod +x /gluster-entrypoint.sh
+#ENTRYPOINT [ "/bin/bash", "/gluster-entrypoint.sh" ]
 
 #To hold the container open
-CMD ["/usr/sbin/glusterd","-Y"]
+CMD ["glusterd", "-N", "--log-file=/dev/stdout"]
