--- a/GlusterFS-Server/dockerfile
+++ b/GlusterFS-Server/dockerfile
@@ -19,12 +19,15 @@ VOLUME ["/data", "/var/lib/glusterd"]
 #Ports list from the original repo: https://github.com/gluster/gluster-containers/blob/master/CentOS/Dockerfile
 #EXPOSE 2222 111 245 443 24007 2049 8080 6010 6011 6012 38465 38466 38468 38469 49152 49153 49154 49156 49157 49158 49159 49160 49161 49162
 
-#COPY /gluster-entrypoint.sh /
-#RUN chmod +x /gluster-entrypoint.sh
-#ENTRYPOINT [ "/bin/bash", "/gluster-entrypoint.sh" ]
+COPY /gluster-entrypoint.sh /
+RUN chmod +x /gluster-entrypoint.sh
+ENTRYPOINT [ "/bin/bash", "/gluster-entrypoint.sh" ]
 
 #To hold the container open
 #CMD ["glusterd", "-N", "--log-file=/dev/stdout"]
 #CMD ["glusterd"]
 #CMD ["glusterd peer status"]
-CMD ["/usr/sbin/glusterd","-N"]
+#CMD ["/usr/sbin/glusterd","-N"]
+#CMD ["/usr/sbin/init"]
+#CMD ["glusterd peer status"]
+#CMD "glusterd --no-daemon --log-file=/dev/stdout"
