--- a/GlusterFS-Server/dockerfile
+++ b/GlusterFS-Server/dockerfile
@@ -1,17 +1,16 @@
 # Gluster v9.x 
 # Ubuntu image instead of Alpine for install simplicty of Launchpad: https://launchpad.net/~gluster/+archive/ubuntu/glusterfs-9
 
-FROM centos:centos8
+FROM ubuntu:latest
 LABEL org.opencontainers.image.source=https://github.com/goingoffroading/glusterfs
 
-ENV GLUSTER_VERSION 9
-
 # Install Gluster + dependancies 
-RUN set -xe && \
-    yum install -y centos-release-gluster${GLUSTER_VERSION/./}.noarch && \
-    yum install -y glusterfs-server && \
-    yum clean all 
-#    glusterd
+RUN apt-get update && \
+    apt-get install -y software-properties-common && \
+    add-apt-repository ppa:gluster/glusterfs-9 && \
+    apt-get update && \
+    apt-get install -y glusterfs-server
 
-CMD ["glusterd", "-N", "--log-file=/dev/stdout"]
-#CMD ["/usr/sbin/init"]
+CMD ["/usr/sbin/init"]
+
+RUN glusterd --version
