--- a/GlusterFS-Client/dockerfile
+++ b/GlusterFS-Client/dockerfile
@@ -9,16 +9,8 @@ RUN apt-get update && \
     apt-get install -y software-properties-common && \
     add-apt-repository ppa:gluster/glusterfs-9 && \
     apt-get update && \
-    apt-get install -y glusterfs-server
+    apt-get install -y glusterfs-client
 
-#CMD ["/usr/sbin/init"]
-CMD glusterd -N
+    VOLUME ["/share"]
 
-
-#COPY /gluster-entrypoint.sh /
-#RUN chmod +x /gluster-entrypoint.sh
-
-#ENTRYPOINT [ "/bin/bash", "/gluster-entrypoint.sh" ]
-#RUN glusterd --version
-
-#CMD service glusterd start 
+CMD ["/usr/sbin/init"]
